scrollToTopBtn margin corrected on mobile

--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -213,6 +213,7 @@ blockquote {
         border: dashed 1px $primary;
         border-radius: 4px;
         padding: 0 8px;
+        margin-top: 16px;
         cursor: pointer;
         font-size: 16px;
         color: $primary;
@@ -342,6 +343,12 @@ blockquote {
 
     .page-content {
         font-size: 1.125rem;
+    }
+
+    .footer {
+        button {
+            margin-top: 0;
+        }
     }
 
     .works-grid-container {
